[package]
name = "remipn"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI framework
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }

# Date/Time
chrono = "0.4"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command execution
async-process = "2.1"

# Configuration
dirs = "5.0"

# Signal handling
regex = "1.10"
log = "0.4.29"
comfy-table = "7.2.2"
colored = "3.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
